--- a/index.html
+++ b/index.html
@@ -15,8 +15,58 @@
         </main>
         <section>
             <h5>Lorem, ipsum dolor.</h5>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, recusandae!</p>
+            <p class="text-warning">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, recusandae!</p>
+            <a class="bg-success-light-5" href="#contact">click me</a>
         </section>
+        <article>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est totam id quaerat molestias iure nulla dolores amet! Eveniet aperiam totam enim velit. Sapiente culpa eius amet eaque deleniti, voluptatem expedita.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque similique itaque sequi quia maxime magni corrupti? Suscipit officiis quod deleniti ea. Nisi ipsam exercitationem sed incidunt aliquam provident, beatae non.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda facilis quam suscipit, quisquam ducimus perspiciatis unde ipsa quasi! Iusto at iste obcaecati doloremque voluptates recusandae dolor dolorem maiores temporibus quis.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, ipsam id. Saepe quia illo veritatis incidunt dolor, expedita eaque debitis voluptate deserunt tenetur vel facilis cumque, magni explicabo nam. Similique?
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est totam id quaerat molestias iure nulla dolores amet! Eveniet aperiam totam enim velit. Sapiente culpa eius amet eaque deleniti, voluptatem expedita.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque similique itaque sequi quia maxime magni corrupti? Suscipit officiis quod deleniti ea. Nisi ipsam exercitationem sed incidunt aliquam provident, beatae non.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda facilis quam suscipit, quisquam ducimus perspiciatis unde ipsa quasi! Iusto at iste obcaecati doloremque voluptates recusandae dolor dolorem maiores temporibus quis.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, ipsam id. Saepe quia illo veritatis incidunt dolor, expedita eaque debitis voluptate deserunt tenetur vel facilis cumque, magni explicabo nam. Similique?
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est totam id quaerat molestias iure nulla dolores amet! Eveniet aperiam totam enim velit. Sapiente culpa eius amet eaque deleniti, voluptatem expedita.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque similique itaque sequi quia maxime magni corrupti? Suscipit officiis quod deleniti ea. Nisi ipsam exercitationem sed incidunt aliquam provident, beatae non.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda facilis quam suscipit, quisquam ducimus perspiciatis unde ipsa quasi! Iusto at iste obcaecati doloremque voluptates recusandae dolor dolorem maiores temporibus quis.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, ipsam id. Saepe quia illo veritatis incidunt dolor, expedita eaque debitis voluptate deserunt tenetur vel facilis cumque, magni explicabo nam. Similique?
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est totam id quaerat molestias iure nulla dolores amet! Eveniet aperiam totam enim velit. Sapiente culpa eius amet eaque deleniti, voluptatem expedita.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque similique itaque sequi quia maxime magni corrupti? Suscipit officiis quod deleniti ea. Nisi ipsam exercitationem sed incidunt aliquam provident, beatae non.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda facilis quam suscipit, quisquam ducimus perspiciatis unde ipsa quasi! Iusto at iste obcaecati doloremque voluptates recusandae dolor dolorem maiores temporibus quis.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, ipsam id. Saepe quia illo veritatis incidunt dolor, expedita eaque debitis voluptate deserunt tenetur vel facilis cumque, magni explicabo nam. Similique?
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est totam id quaerat molestias iure nulla dolores amet! Eveniet aperiam totam enim velit. Sapiente culpa eius amet eaque deleniti, voluptatem expedita.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque similique itaque sequi quia maxime magni corrupti? Suscipit officiis quod deleniti ea. Nisi ipsam exercitationem sed incidunt aliquam provident, beatae non.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda facilis quam suscipit, quisquam ducimus perspiciatis unde ipsa quasi! Iusto at iste obcaecati doloremque voluptates recusandae dolor dolorem maiores temporibus quis.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, ipsam id. Saepe quia illo veritatis incidunt dolor, expedita eaque debitis voluptate deserunt tenetur vel facilis cumque, magni explicabo nam. Similique?
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est totam id quaerat molestias iure nulla dolores amet! Eveniet aperiam totam enim velit. Sapiente culpa eius amet eaque deleniti, voluptatem expedita.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque similique itaque sequi quia maxime magni corrupti? Suscipit officiis quod deleniti ea. Nisi ipsam exercitationem sed incidunt aliquam provident, beatae non.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda facilis quam suscipit, quisquam ducimus perspiciatis unde ipsa quasi! Iusto at iste obcaecati doloremque voluptates recusandae dolor dolorem maiores temporibus quis.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, ipsam id. Saepe quia illo veritatis incidunt dolor, expedita eaque debitis voluptate deserunt tenetur vel facilis cumque, magni explicabo nam. Similique?
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est totam id quaerat molestias iure nulla dolores amet! Eveniet aperiam totam enim velit. Sapiente culpa eius amet eaque deleniti, voluptatem expedita.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque similique itaque sequi quia maxime magni corrupti? Suscipit officiis quod deleniti ea. Nisi ipsam exercitationem sed incidunt aliquam provident, beatae non.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda facilis quam suscipit, quisquam ducimus perspiciatis unde ipsa quasi! Iusto at iste obcaecati doloremque voluptates recusandae dolor dolorem maiores temporibus quis.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, ipsam id. Saepe quia illo veritatis incidunt dolor, expedita eaque debitis voluptate deserunt tenetur vel facilis cumque, magni explicabo nam. Similique?
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est totam id quaerat molestias iure nulla dolores amet! Eveniet aperiam totam enim velit. Sapiente culpa eius amet eaque deleniti, voluptatem expedita.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque similique itaque sequi quia maxime magni corrupti? Suscipit officiis quod deleniti ea. Nisi ipsam exercitationem sed incidunt aliquam provident, beatae non.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda facilis quam suscipit, quisquam ducimus perspiciatis unde ipsa quasi! Iusto at iste obcaecati doloremque voluptates recusandae dolor dolorem maiores temporibus quis.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, ipsam id. Saepe quia illo veritatis incidunt dolor, expedita eaque debitis voluptate deserunt tenetur vel facilis cumque, magni explicabo nam. Similique?
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est totam id quaerat molestias iure nulla dolores amet! Eveniet aperiam totam enim velit. Sapiente culpa eius amet eaque deleniti, voluptatem expedita.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque similique itaque sequi quia maxime magni corrupti? Suscipit officiis quod deleniti ea. Nisi ipsam exercitationem sed incidunt aliquam provident, beatae non.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda facilis quam suscipit, quisquam ducimus perspiciatis unde ipsa quasi! Iusto at iste obcaecati doloremque voluptates recusandae dolor dolorem maiores temporibus quis.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, ipsam id. Saepe quia illo veritatis incidunt dolor, expedita eaque debitis voluptate deserunt tenetur vel facilis cumque, magni explicabo nam. Similique?
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est totam id quaerat molestias iure nulla dolores amet! Eveniet aperiam totam enim velit. Sapiente culpa eius amet eaque deleniti, voluptatem expedita.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque similique itaque sequi quia maxime magni corrupti? Suscipit officiis quod deleniti ea. Nisi ipsam exercitationem sed incidunt aliquam provident, beatae non.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda facilis quam suscipit, quisquam ducimus perspiciatis unde ipsa quasi! Iusto at iste obcaecati doloremque voluptates recusandae dolor dolorem maiores temporibus quis.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, ipsam id. Saepe quia illo veritatis incidunt dolor, expedita eaque debitis voluptate deserunt tenetur vel facilis cumque, magni explicabo nam. Similique?
+            vLorem ipsum dolor sit, amet consectetur adipisicing elit. Est totam id quaerat molestias iure nulla dolores amet! Eveniet aperiam totam enim velit. Sapiente culpa eius amet eaque deleniti, voluptatem expedita.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque similique itaque sequi quia maxime magni corrupti? Suscipit officiis quod deleniti ea. Nisi ipsam exercitationem sed incidunt aliquam provident, beatae non.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda facilis quam suscipit, quisquam ducimus perspiciatis unde ipsa quasi! Iusto at iste obcaecati doloremque voluptates recusandae dolor dolorem maiores temporibus quis.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, ipsam id. Saepe quia illo veritatis incidunt dolor, expedita eaque debitis voluptate deserunt tenetur vel facilis cumque, magni explicabo nam. Similique?
+        </article>
+        <aside id="contact">
+            email me: lazarochloekim@gmail.com
+        </aside>
     </div>
 </body>
 </html>
