--- a/index.html
+++ b/index.html
@@ -8,65 +8,21 @@
     <title>Template</title>
 </head>
 <body>
-    <div class="container">
-        <main>
-            <h4>Hello World</h4>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam quae laborum odit fugiat. Commodi temporibus quis doloribus vero cum dicta atque ducimus nihil.</p>
-        </main>
-        <section>
-            <h5>Lorem, ipsum dolor.</h5>
-            <p class="text-warning">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, recusandae!</p>
-            <a class="bg-success-light-5" href="#contact">click me</a>
-        </section>
-        <article>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est totam id quaerat molestias iure nulla dolores amet! Eveniet aperiam totam enim velit. Sapiente culpa eius amet eaque deleniti, voluptatem expedita.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque similique itaque sequi quia maxime magni corrupti? Suscipit officiis quod deleniti ea. Nisi ipsam exercitationem sed incidunt aliquam provident, beatae non.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda facilis quam suscipit, quisquam ducimus perspiciatis unde ipsa quasi! Iusto at iste obcaecati doloremque voluptates recusandae dolor dolorem maiores temporibus quis.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, ipsam id. Saepe quia illo veritatis incidunt dolor, expedita eaque debitis voluptate deserunt tenetur vel facilis cumque, magni explicabo nam. Similique?
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est totam id quaerat molestias iure nulla dolores amet! Eveniet aperiam totam enim velit. Sapiente culpa eius amet eaque deleniti, voluptatem expedita.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque similique itaque sequi quia maxime magni corrupti? Suscipit officiis quod deleniti ea. Nisi ipsam exercitationem sed incidunt aliquam provident, beatae non.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda facilis quam suscipit, quisquam ducimus perspiciatis unde ipsa quasi! Iusto at iste obcaecati doloremque voluptates recusandae dolor dolorem maiores temporibus quis.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, ipsam id. Saepe quia illo veritatis incidunt dolor, expedita eaque debitis voluptate deserunt tenetur vel facilis cumque, magni explicabo nam. Similique?
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est totam id quaerat molestias iure nulla dolores amet! Eveniet aperiam totam enim velit. Sapiente culpa eius amet eaque deleniti, voluptatem expedita.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque similique itaque sequi quia maxime magni corrupti? Suscipit officiis quod deleniti ea. Nisi ipsam exercitationem sed incidunt aliquam provident, beatae non.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda facilis quam suscipit, quisquam ducimus perspiciatis unde ipsa quasi! Iusto at iste obcaecati doloremque voluptates recusandae dolor dolorem maiores temporibus quis.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, ipsam id. Saepe quia illo veritatis incidunt dolor, expedita eaque debitis voluptate deserunt tenetur vel facilis cumque, magni explicabo nam. Similique?
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est totam id quaerat molestias iure nulla dolores amet! Eveniet aperiam totam enim velit. Sapiente culpa eius amet eaque deleniti, voluptatem expedita.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque similique itaque sequi quia maxime magni corrupti? Suscipit officiis quod deleniti ea. Nisi ipsam exercitationem sed incidunt aliquam provident, beatae non.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda facilis quam suscipit, quisquam ducimus perspiciatis unde ipsa quasi! Iusto at iste obcaecati doloremque voluptates recusandae dolor dolorem maiores temporibus quis.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, ipsam id. Saepe quia illo veritatis incidunt dolor, expedita eaque debitis voluptate deserunt tenetur vel facilis cumque, magni explicabo nam. Similique?
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est totam id quaerat molestias iure nulla dolores amet! Eveniet aperiam totam enim velit. Sapiente culpa eius amet eaque deleniti, voluptatem expedita.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque similique itaque sequi quia maxime magni corrupti? Suscipit officiis quod deleniti ea. Nisi ipsam exercitationem sed incidunt aliquam provident, beatae non.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda facilis quam suscipit, quisquam ducimus perspiciatis unde ipsa quasi! Iusto at iste obcaecati doloremque voluptates recusandae dolor dolorem maiores temporibus quis.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, ipsam id. Saepe quia illo veritatis incidunt dolor, expedita eaque debitis voluptate deserunt tenetur vel facilis cumque, magni explicabo nam. Similique?
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est totam id quaerat molestias iure nulla dolores amet! Eveniet aperiam totam enim velit. Sapiente culpa eius amet eaque deleniti, voluptatem expedita.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque similique itaque sequi quia maxime magni corrupti? Suscipit officiis quod deleniti ea. Nisi ipsam exercitationem sed incidunt aliquam provident, beatae non.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda facilis quam suscipit, quisquam ducimus perspiciatis unde ipsa quasi! Iusto at iste obcaecati doloremque voluptates recusandae dolor dolorem maiores temporibus quis.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, ipsam id. Saepe quia illo veritatis incidunt dolor, expedita eaque debitis voluptate deserunt tenetur vel facilis cumque, magni explicabo nam. Similique?
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est totam id quaerat molestias iure nulla dolores amet! Eveniet aperiam totam enim velit. Sapiente culpa eius amet eaque deleniti, voluptatem expedita.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque similique itaque sequi quia maxime magni corrupti? Suscipit officiis quod deleniti ea. Nisi ipsam exercitationem sed incidunt aliquam provident, beatae non.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda facilis quam suscipit, quisquam ducimus perspiciatis unde ipsa quasi! Iusto at iste obcaecati doloremque voluptates recusandae dolor dolorem maiores temporibus quis.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, ipsam id. Saepe quia illo veritatis incidunt dolor, expedita eaque debitis voluptate deserunt tenetur vel facilis cumque, magni explicabo nam. Similique?
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est totam id quaerat molestias iure nulla dolores amet! Eveniet aperiam totam enim velit. Sapiente culpa eius amet eaque deleniti, voluptatem expedita.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque similique itaque sequi quia maxime magni corrupti? Suscipit officiis quod deleniti ea. Nisi ipsam exercitationem sed incidunt aliquam provident, beatae non.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda facilis quam suscipit, quisquam ducimus perspiciatis unde ipsa quasi! Iusto at iste obcaecati doloremque voluptates recusandae dolor dolorem maiores temporibus quis.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, ipsam id. Saepe quia illo veritatis incidunt dolor, expedita eaque debitis voluptate deserunt tenetur vel facilis cumque, magni explicabo nam. Similique?
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est totam id quaerat molestias iure nulla dolores amet! Eveniet aperiam totam enim velit. Sapiente culpa eius amet eaque deleniti, voluptatem expedita.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque similique itaque sequi quia maxime magni corrupti? Suscipit officiis quod deleniti ea. Nisi ipsam exercitationem sed incidunt aliquam provident, beatae non.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda facilis quam suscipit, quisquam ducimus perspiciatis unde ipsa quasi! Iusto at iste obcaecati doloremque voluptates recusandae dolor dolorem maiores temporibus quis.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, ipsam id. Saepe quia illo veritatis incidunt dolor, expedita eaque debitis voluptate deserunt tenetur vel facilis cumque, magni explicabo nam. Similique?
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est totam id quaerat molestias iure nulla dolores amet! Eveniet aperiam totam enim velit. Sapiente culpa eius amet eaque deleniti, voluptatem expedita.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque similique itaque sequi quia maxime magni corrupti? Suscipit officiis quod deleniti ea. Nisi ipsam exercitationem sed incidunt aliquam provident, beatae non.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda facilis quam suscipit, quisquam ducimus perspiciatis unde ipsa quasi! Iusto at iste obcaecati doloremque voluptates recusandae dolor dolorem maiores temporibus quis.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, ipsam id. Saepe quia illo veritatis incidunt dolor, expedita eaque debitis voluptate deserunt tenetur vel facilis cumque, magni explicabo nam. Similique?
-            vLorem ipsum dolor sit, amet consectetur adipisicing elit. Est totam id quaerat molestias iure nulla dolores amet! Eveniet aperiam totam enim velit. Sapiente culpa eius amet eaque deleniti, voluptatem expedita.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque similique itaque sequi quia maxime magni corrupti? Suscipit officiis quod deleniti ea. Nisi ipsam exercitationem sed incidunt aliquam provident, beatae non.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda facilis quam suscipit, quisquam ducimus perspiciatis unde ipsa quasi! Iusto at iste obcaecati doloremque voluptates recusandae dolor dolorem maiores temporibus quis.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, ipsam id. Saepe quia illo veritatis incidunt dolor, expedita eaque debitis voluptate deserunt tenetur vel facilis cumque, magni explicabo nam. Similique?
-        </article>
-        <aside id="contact">
-            email me: lazarochloekim@gmail.com
-        </aside>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col col-12">12</div>
+            <div class="col col-11">11</div>
+            <div class="col col-10">10</div>
+            <div class="col col-9">9</div>
+            <div class="col col-8">8</div>
+            <div class="col col-7">7</div>
+            <div class="col col-6">6</div>
+            <div class="col col-5">5</div>
+            <div class="col col-4">4</div>
+            <div class="col col-3">3</div>
+            <div class="col col-2">2</div>
+            <div class="col col-1">1</div>
+        </div>
     </div>
 </body>
 </html>
